Added timezone to auth